...
 */
sealed class BottomNavItem(
    val route: String,
    val title: String,
    val icon: ImageVector
) {
    data object Harpa : BottomNavItem("home_screen", "Harpa", Icons.Outlined.Home)
    data object Favorites :
        BottomNavItem("favorites_screen", "Favoritos", Icons.Outlined.FavoriteBorder)

    data object Discover : BottomNavItem("discover_screen", "Descubra", Icons.Outlined.Search)
    data object More : BottomNavItem("more_screen", "Mais", Icons.Outlined.Menu)
}
...
