appId: com.lucasdelima.louveapp
---
- launchApp
- waitForAnimationToEnd:
    timeout: 15000
- tapOn:
    text: "001"
    index: 0
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Adicionar a lista"
- waitForAnimationToEnd:
    timeout: 3000
- scrollUntilVisible:
    element:
      text: "Criar nova lista de culto..."
    direction: DOWN
    timeout: 10000
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: "Criar nova lista de culto..."
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Nome da lista"
- waitForAnimationToEnd:
    timeout: 1000
- inputText: "Teste Maestro"
- waitForAnimationToEnd:
    timeout: 2000
- scrollUntilVisible:
    element:
      text: "Criar Lista"
    direction: DOWN
    timeout: 10000
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: "Criar Lista"
- waitForAnimationToEnd:
    timeout: 5000
# Verify list appears
- assertVisible: "Teste Maestro"